[metadata]
name = proteindf_pytools
version = 2023.3.5
description = python scripts for ProteinDF package
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
author = Toshiyuki HIRANO
author_email = hiracchi@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Utilities


[options]
packages = proteindf_tools

scripts = 
    scripts/pdf
    scripts/pdf-archive.py
    scripts/pdf-archive-h5.py
    scripts/pdf-atom-index.py
    scripts/pdf-env.py
    scripts/pdf-estimate-ao.py
    scripts/pdf-info-geom.py
    scripts/pdf-info-iteration.py
    scripts/pdf-info-orb.py
    scripts/pdf-info-xyz.py
    scripts/pdf-make-basis2.py
    scripts/pdf-mat-info.py
    scripts/pdf-mat-show.py
    scripts/pdf-plot-basisset.py
    scripts/pdf-plot-elevel.py
    scripts/pdf-plot-mo-tracer.py
    scripts/pdf-plot-mat.py
    scripts/pdf-plot-dos.py
    scripts/pdf-plot-gvalues.py
    scripts/pdf-plot-pop.py
    scripts/pdf-plot-decaymat.py
    scripts/pdf-report.py
    scripts/pdf-report-h5.py
    scripts/pdf-reg-harris.py
    scripts/pdf-show-profile.py
    scripts/pdf-test.py
    scripts/pdf-test-h5.py
    scripts/pdf-test-eri.py
    scripts/xyz2gau.py
    scripts/xyz2pdf.py
    scripts/g0xeri2mpac.py
    scripts/pdf-pop-classo.py
    scripts/pdf-pop-ridge.py
    scripts/pdf-pop-resp.py
    scripts/pdf-pop-rrms.py
    scripts/pdf-set-charges.py


install_requires =
    h5py
    BeautifulSoup4
    numpy
    scipy
    pandas
    matplotlib
    scikit-learn


[options.package_data]
proteindf_tools = data/basis2.cache

